plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.1' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
    group = 'com.maesamco'
    version = '0.1.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }

    // ===== 버전 중앙 관리 =====
    // 서비스별 build.gradle에서 ${jjwtVersion} 처럼 바로 참조합니다.
    // (Version Catalog 대신 ext 블록 사용 — Spring Cloud가 생성해주는
    //  ext { set('springCloudVersion', ...) } 패턴과 스타일을 통일)
    ext {
        springCloudVersion   = "2025.1.3"   // 확정 (Boot 4.1.1 + Initializr 실측)
        jjwtVersion          = "0.13.0"
        springdocVersion     = "3.1.0"   // 확정 (Boot 4.1.1 + Initializr 실측)
        querydslVersion      = "7.6"
        bouncycastleVersion  = "1.79"
        springAiVersion      = "2.0.1"      // 확정 (Boot 4.1.1 + Initializr 실측)
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }
}
